--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-size: 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(153, 146, 146);
 }
 
 code {
